[package]
name = "pyo3hp"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
http = "1.4.0"


[dependencies.pyo3]
version = "0.28.3"
features = ["auto-initialize"]